--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .header {
     margin: 0 auto;
-    background-image: url(../ТЗ/images/image004.png);
+    background-image: url(../Technical-requirement/images/image004.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
@@ -72,7 +72,7 @@ h2 {
 
  .footer {
     margin: 0 auto;
-    background-image: url(../ТЗ/images/image006.png);
+    background-image: url(../Technical-requirement/images/image006.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center center;
